--- a/.build/index.html
+++ b/.build/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="static/img/favicon.png" rel="icon">
-  <link href="static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
 
@@ -46,15 +45,15 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">LL<span>.</span></a></h1>
+      <h1 class="logo scrollto"><a href="#hero">LL<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Servicos</a></li>
+          <li><a href="#payment">Pagamento</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
@@ -73,39 +72,6 @@
       <div class="col-xl-6 col-lg-8">
         <h1>LucLog<span>.</span></h1>
         <h2>Codificando suas ideias</h2>
-      </div>
-    </div>
-
-    <div class="row mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
-      <div class="col-xl-2 col-md-4 col-6">
-        <div class="icon-box">
-          <i class="ri-store-line"></i>
-          <h3><a href="">Lorem Ipsum</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4 col-6 ">
-        <div class="icon-box">
-          <i class="ri-bar-chart-box-line"></i>
-          <h3><a href="">Dolor Sitema</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
-        <div class="icon-box">
-          <i class="ri-calendar-todo-line"></i>
-          <h3><a href="">Sedare Perspiciatis</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
-        <div class="icon-box">
-          <i class="ri-paint-brush-line"></i>
-          <h3><a href="">Magni Dolores</a></h3>
-        </div>
-      </div>
-      <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
-        <div class="icon-box">
-          <i class="ri-database-2-line"></i>
-          <h3><a href="">Nemos Enimade</a></h3>
-        </div>
       </div>
     </div>
 
@@ -212,49 +178,25 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <div class="icon"><i class="bx bx-window-alt"></i></div>
+              <h4><a href="">Sites</a></h4>
+              <p>Crie um blog, site comercial ou personalizado conosco</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <div class="icon"><i class="bx bx-server"></i></div>
+              <h4><a href="">API's</a></h4>
+              <p>Implemente sua API para sistemas web, mobile e embarcados.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Divera don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
+              <h4><a href="">Gráficos</a></h4>
+              <p>Representações gráficas 2D e 3D para análise de dados por aplicação web</p>
             </div>
           </div>
 
@@ -265,7 +207,7 @@
 
 
     <!-- ======= Cta Section ======= -->
-<section id="cta" class="cta">
+<section id="payment" class="cta">
   <div class="container" data-aos="zoom-in">
 
     <div class="section-title">
@@ -273,12 +215,32 @@
       <p>Formas de Pagamento</p>
     </div>
 
-    <div class="d-flex">
+    <div class="d-flex justify-content-between">
 
-    <div class="bg-warning">
-      <div class="icon p-3 display-2"><i class="bx bx-bitcoin text-dark"></i></div>
-    </div>
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-bitcoin bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Bitcoin</p>
+      </div>
 
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-money bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Dinheiro</p>
+      </div>
+
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-credit-card-front bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Depósito</p>
+      </div>
+
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bxl-paypal bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">PayPal</p>
+      </div>
+
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-barcode bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Boleto</p>
+      </div>
 
     </div>
 
@@ -515,13 +477,10 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Contact</h2>
-      <p>Contact Us</p>
+      <h2>Contato</h2>
+      <p>Entre em contato conosco </p>
     </div>
 
-    <div>
-      <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-    </div>
 
     <div class="row mt-5">
 
