--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="{% static 'static/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'static/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
 
@@ -46,15 +45,15 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">LL<span>.</span></a></h1>
+      <h1 class="logo scrollto"><a href="#hero">LL<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Servicos</a></li>
+          <li><a href="#payment">Pagamento</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
@@ -77,7 +76,7 @@
 
     {% include "index_includes/servicos.html" %}
 
-    {% include "index_includes/call.html" %}
+    {% include "index_includes/payment.html" %}
 
     {% include "index_includes/portfolio.html" %}
 
