--- a/.build/index_includes/servicos.html
+++ b/.build/index_includes/servicos.html
@@ -3,35 +3,48 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Check our Services</p>
+          <h2>Serviços</h2>
+          <p>Nossos serviços</p>
         </div>
 
-        <div class="row">
+
+        <div class="row align-items-center">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
+              <h2 class="text-dark">Sites</h2>
+              <p class="display-4 my-4">Crie um blog, site comercial ou site personalizado conosco</p>
               <div class="icon"><i class="bx bx-window-alt"></i></div>
-              <h4><a href="">Sites</a></h4>
-              <p>Crie um blog, site comercial ou personalizado conosco</p>
             </div>
           </div>
+          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+            <img src="static/img/website.svg" class="img-fluid" alt="">
+          </div>
+        </div>
 
+        <div class="row align-items-center">
+          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+            <img src="static/img/server.svg" class="img-fluid" alt="">
+          </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
+              <h2 class="text-dark">API's</h2>
+              <p class="my-4">Implemente sua API para sistemas web, mobile e embarcados.</p>
               <div class="icon"><i class="bx bx-server"></i></div>
-              <h4><a href="">API's</a></h4>
-              <p>Implemente sua API para sistemas web, mobile e embarcados.</p>
             </div>
           </div>
+        </div>
 
+        <div class="row align-items-center">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
+              <h2 class="text-dark">Gráficos</h2>
+              <p class="my-4">Representações gráficas 2D e 3D para análise de dados por aplicação web</p>
               <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
-              <h4><a href="">Gráficos</a></h4>
-              <p>Representações gráficas 2D e 3D para análise de dados por aplicação web</p>
             </div>
           </div>
-
+          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+            <img src="static/img/charts.svg" class="img-fluid" alt="">
+          </div>
         </div>
 
       </div>
