--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>LugLog</title>
+  <title>LUCLOG</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -52,7 +52,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="#about">Sobre</a></li>
-          <li><a href="#services">Servicos</a></li>
+          <li><a href="#services">Serviços</a></li>
           <li><a href="#payment">Pagamento</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
           <li><a href="#contact">Contato</a></li>
