--- a/pages/index_includes/servicos.html
+++ b/pages/index_includes/servicos.html
@@ -13,7 +13,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <h2 class="text-dark">Sites</h2>
-              <p class="display-4 my-4">Crie um blog, site comercial ou site personalizado conosco</p>
+              <p class="display-4 my-4 font-josefin">Crie um blog, site comercial ou site personalizado conosco</p>
               <div class="icon"><i class="bx bx-window-alt"></i></div>
             </div>
           </div>
@@ -29,7 +29,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <h2 class="text-dark">API's</h2>
-              <p class="my-4">Implemente sua API para sistemas web, mobile e embarcados.</p>
+              <p class="my-4 font-josefin">Implemente sua API para sistemas web, mobile e embarcados.</p>
               <div class="icon"><i class="bx bx-server"></i></div>
             </div>
           </div>
@@ -38,8 +38,8 @@
         <div class="row align-items-center">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <h2 class="text-dark">Gráficos</h2>
-              <p class="my-4">Representações gráficas 2D e 3D para análise de dados por aplicação web</p>
+              <h2 class="text-dark">Web Charts</h2>
+              <p class="my-4 font-josefin">Aplicações web de representações gráficas 2D e 3D para análise</p>
               <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
             </div>
           </div>
