--- a/pages/index.html
+++ b/pages/index.html
@@ -54,7 +54,7 @@
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#payment">Pagamento</a></li>
-          <li><a href="#portfolio">Portfólio</a></li>
+          <li><a href="#portfolio">Portifólio</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -70,17 +70,11 @@
 
     {% include "index_includes/sobre.html" %}
 
-    {% include "index_includes/clientes.html" %}
-
-    {% include "index_includes/caracteristicas.html" %}
-
     {% include "index_includes/servicos.html" %}
 
     {% include "index_includes/payment.html" %}
 
     {% include "index_includes/portfolio.html" %}
-
-    {% include "index_includes/qualificacoe.html" %}
 
     {% include "index_includes/testimonials.html" %}
 
@@ -181,5 +175,7 @@
   <script src="{% static 'static/js/main.js' %}"></script>
 
 </body>
+
+
 
 </html>
