--- a/.build/index_includes/servicos.html
+++ b/.build/index_includes/servicos.html
@@ -8,7 +8,7 @@
         </div>
 
 
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-between">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <h2 class="text-dark">Sites</h2>
@@ -16,13 +16,13 @@
               <div class="icon"><i class="bx bx-window-alt"></i></div>
             </div>
           </div>
-          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <img src="static/img/website.svg" class="img-fluid" alt="">
           </div>
         </div>
 
-        <div class="row align-items-center">
-          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <img src="static/img/server.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-between">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <h2 class="text-dark">Web Charts</h2>
@@ -42,7 +42,7 @@
               <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
             </div>
           </div>
-          <div class="col-lg-8 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <img src="static/img/charts.svg" class="img-fluid" alt="">
           </div>
         </div>
