--- a/pages/index_includes/sobre.html
+++ b/pages/index_includes/sobre.html
@@ -4,7 +4,7 @@
 
     <div class="row align-items-center">
       <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-        <img src="{% static 'static/img/program.svg' %}" class="img-fluid pt-5" alt="">
+        <img src="{% static 'static/img/computers.svg' %}" class="img-fluid pt-5" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
         <h3>LucLog <span class="text-warning">•</span> codificando suas ideais</h3>
@@ -28,23 +28,25 @@
   <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="image col-lg-6" style='background-image: url("static/img/features.jpg");' data-aos="fade-right"></div>
-          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-6 order-2 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-receipt"></i>
-              <h4>Est labore ad</h4>
-              <p class="font-josefin">Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <i class="bx bx-vector"></i>
+              <h4>Fullstack</h4>
+              <p class="font-josefin">Nossa equipe desenvolve o produto desde sua concepção até seu lançamento</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-cube-alt"></i>
-              <h4>Harum esse qui</h4>
-              <p class="font-josefin">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <i class="bx bx-layer"></i>
+              <h4>Expansão</h4>
+              <p class="font-josefin">Todos os nossos produtos e serviços podem ser habilitados para novos módulos e funcionalidades</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-images"></i>
-              <h4>Aut occaecati</h4>
-              <p class="font-josefin"> Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <i class="bx bx-wrench"></i>
+              <h4>Manutenção</h4>
+              <p class="font-josefin"> Os produtos tem planos de manutenção e backup que podem ser incluídos</p>
             </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-1" data-aos="fade-right" data-aos-delay="100">
+            <img src="{% static 'static/img/windows.svg' %}" class="img-fluid" alt="">
           </div>
         </div>
 
