--- a/.build/index.html
+++ b/.build/index.html
@@ -53,9 +53,9 @@
         <ul>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
-          <li><a href="#payment">Pagamento</a></li>
           <li><a href="#portfolio">Portifólio</a></li>
-          <li><a href="#contact">Contato</a></li>
+          <li><a href="#project">Projeto</a></li>
+          <li><a href="#payment">Pagamento</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -113,7 +113,7 @@
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-vector"></i>
+              <i class="bx bx-analyse"></i>
               <h4>Fullstack</h4>
               <p class="font-josefin">Nossa equipe desenvolve o produto desde sua concepção até seu lançamento</p>
             </div>
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/website.svg" class="img-fluid" alt="">
+            <img src="static/img/website.svg" class="img-fluid p-lg-4" alt="">
           </div>
         </div>
 
@@ -191,69 +191,41 @@
     </section><!-- End Services Section -->
 
 
-    <!-- ======= Cta Section ======= -->
-<section id="payment" class="cta">
-  <div class="container" data-aos="zoom-in">
-
-    <div class="section-title">
-      <h2>Pagamento</h2>
-      <p>Formas de Pagamento</p>
-    </div>
-
-    <div class="d-flex justify-content-between">
-
-      <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-bitcoin bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Bitcoin</p>
-      </div>
-
-      <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-money bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Dinheiro</p>
-      </div>
-
-      <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-credit-card-front bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Depósito</p>
-      </div>
-
-      <div class="d-flex flex-column align-items-center">
-        <i class="bx bxl-paypal bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">PayPal</p>
-      </div>
-
-      <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-barcode bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Boleto</p>
-      </div>
-
-    </div>
-
-  </div>
-</section><!-- End Cta Section -->
-
-
     <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Portfolio</h2>
-      <p>Check our Portfolio</p>
+      <h2>Portifólio</h2>
+      <p>Portifólio de trabalhos</p>
     </div>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter="*" class="filter-active">Tudo</li>
+          <li data-filter=".filter-site">Site</li>
+          <li data-filter=".filter-api">API</li>
+          <li data-filter=".filter-chart">Web Chart</li>
+          <li data-filter=".filter-outros">Outros</li>
         </ul>
       </div>
     </div>
 
     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-site">
+        <div class="portfolio-wrap">
+          <img src="static/img/portfolio/geofluxo.png" class="img-fluid shadow" alt="">
+          <div class="portfolio-info">
+            <h4>Site Comercial</h4>
+            <p>geofluxo.com</p>
+            <div class="portfolio-links">
+              <a target="_blank" rel="noopener noreferrer" href="https://geofluxo.com" title="More Details"><i class="bx bxs-right-top-arrow-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
@@ -387,145 +359,68 @@
 </section><!-- End Portfolio Section -->
 
 
-    
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container" data-aos="zoom-in">
-
-        <div class="owl-carousel testimonials-carousel">
-
-          <div class="testimonial-item">
-            <img src="static/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="static/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="static/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="static/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="static/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
-
-
-    <!-- ======= Contact Section ======= -->
-<section id="contact" class="contact">
+    <section id="project">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Contato</h2>
-      <p>Entre em contato conosco </p>
+      <h2>Projeto</h2>
+      <p>Descreva seu projeto</p>
     </div>
 
 
-    <div class="row mt-5">
+    <div class="row align-items-center justify-content-between mt-5">
+      <div class="col-lg-6">
+        <img src="static/img/deal.svg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 text-center">
+        <a href="#" class="btn btn-lg btn-warning my-3">Descrever seu projeto</a>
+        <p class="font-josefin mx-3">Descreva suas ideias e produtos que deseja, para nossa equipe já iniciar os trabalhos</p>
+      </div>
+    </div>
+  </div>
+</section>
 
-      <div class="col-lg-4">
-        <div class="info">
-          <div class="address">
-            <i class="icofont-google-map"></i>
-            <h4>Location:</h4>
-            <p>A108 Adam Street, New York, NY 535022</p>
-          </div>
 
-          <div class="email">
-            <i class="icofont-envelope"></i>
-            <h4>Email:</h4>
-            <p>info@example.com</p>
-          </div>
+    <!-- ======= Cta Section ======= -->
+<section id="payment" class="cta">
+  <div class="container" data-aos="zoom-in">
 
-          <div class="phone">
-            <i class="icofont-phone"></i>
-            <h4>Call:</h4>
-            <p>+1 5589 55488 55s</p>
-          </div>
+    <div class="section-title">
+      <h2>Pagamento</h2>
+      <p>Formas de Pagamento</p>
+    </div>
 
-        </div>
+    <div class="d-flex justify-content-between">
 
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-bitcoin bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Bitcoin</p>
       </div>
 
-      <div class="col-lg-8 mt-5 mt-lg-0">
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-money bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Dinheiro</p>
+      </div>
 
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="form-row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-              <div class="validate"></div>
-            </div>
-            <div class="col-md-6 form-group">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-              <div class="validate"></div>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit">Send Message</button></div>
-        </form>
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-credit-card-front bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Depósito</p>
+      </div>
 
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bxl-paypal bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">PayPal</p>
+      </div>
+
+      <div class="d-flex flex-column align-items-center">
+        <i class="bx bx-barcode bg-warning display-3 rounded" style="color:black;"></i>
+        <p class="text-warning">Boleto</p>
       </div>
 
     </div>
 
   </div>
-</section><!-- End Contact Section -->
+</section><!-- End Cta Section -->
 
 
   </main><!-- End #main -->
