--- a/pages/index_includes/portfolio.html
+++ b/pages/index_includes/portfolio.html
@@ -3,22 +3,36 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Portfolio</h2>
-      <p>Check our Portfolio</p>
+      <h2>Portifólio</h2>
+      <p>Portifólio de trabalhos</p>
     </div>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
-          <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter="*" class="filter-active">Tudo</li>
+          <li data-filter=".filter-site">Site</li>
+          <li data-filter=".filter-api">API</li>
+          <li data-filter=".filter-chart">Web Chart</li>
+          <li data-filter=".filter-outros">Outros</li>
         </ul>
       </div>
     </div>
 
     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-site">
+        <div class="portfolio-wrap">
+          <img src="{% static 'static/img/portfolio/geofluxo.png' %}" class="img-fluid shadow" alt="">
+          <div class="portfolio-info">
+            <h4>Site Comercial</h4>
+            <p>geofluxo.com</p>
+            <div class="portfolio-links">
+              <a target="_blank" rel="noopener noreferrer" href="https://geofluxo.com" title="More Details"><i class="bx bxs-right-top-arrow-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
