--- a/.build/index_includes/sobre.html
+++ b/.build/index_includes/sobre.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bx bx-vector"></i>
+              <i class="bx bx-analyse"></i>
               <h4>Fullstack</h4>
               <p class="font-josefin">Nossa equipe desenvolve o produto desde sua concepção até seu lançamento</p>
             </div>
