--- a/pages/index.html
+++ b/pages/index.html
@@ -53,9 +53,9 @@
         <ul>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
-          <li><a href="#payment">Pagamento</a></li>
           <li><a href="#portfolio">Portifólio</a></li>
-          <li><a href="#contact">Contato</a></li>
+          <li><a href="#project">Projeto</a></li>
+          <li><a href="#payment">Pagamento</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -72,13 +72,11 @@
 
     {% include "index_includes/servicos.html" %}
 
-    {% include "index_includes/payment.html" %}
-
     {% include "index_includes/portfolio.html" %}
 
-    {% include "index_includes/testimonials.html" %}
+    {% include "index_includes/project.html" %}
 
-    {% include "index_includes/contato.html" %}
+    {% include "index_includes/payment.html" %}
 
   </main><!-- End #main -->
 
