--- a/pages/index_includes/servicos.html
+++ b/pages/index_includes/servicos.html
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <img src="{% static 'static/img/website.svg' %}" class="img-fluid" alt="">
+            <img src="{% static 'static/img/website.svg' %}" class="img-fluid p-lg-4" alt="">
           </div>
         </div>
 
