extended by base

--- a/pages/index_includes/project.html
+++ b/pages/index_includes/project.html
@@ -1,19 +1,25 @@
 <section id="project">
-  <div class="container" data-aos="fade-up">
+  <div class="container mb-5 pb-5" data-aos="fade-up">
 
     <div class="section-title">
       <h2>Projeto</h2>
       <p>Descreva seu projeto</p>
     </div>
 
-
     <div class="row align-items-center justify-content-between mt-5">
       <div class="col-lg-6">
         <img src="{% static 'static/img/deal.svg' %}" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 text-center">
-        <a href="#" class="btn btn-lg btn-warning my-3">Descrever seu projeto</a>
+        <a href="#" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
         <p class="font-josefin mx-3">Descreva suas ideias e produtos que deseja, para nossa equipe já iniciar os trabalhos</p>
+        <div class="d-flex justify-content-center align-items-center">
+          <hr class="w-100 bg-warning"> 
+          <span class="font-jura mb-1 mx-3 text-warning">ou</span>
+          <hr class="w-100 bg-warning"> 
+        </div>
+        <p class="font-josefin mx-3 mb-0 mt-3">Acompanhe as etapas de seu projeto e veja como estamos trabalhando nele</p>
+        <a href="#" class="btn btn-lg btn-dark my-3">Acompanhar projeto</a>
       </div>
     </div>
   </div>
