--- a/pages/index.html
+++ b/pages/index.html
@@ -1,179 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% load static %}
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+{% block nav_ul %}
 
-  <title>LUCLOG</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <li><a href="#about">Sobre</a></li>
+  <li><a href="#services">Serviços</a></li>
+  <li><a href="#portfolio">Portifólio</a></li>
+  <li><a href="#project">Projeto</a></li>
+  <li><a href="#payment">Pagamento</a></li>
 
-  <!-- Favicons -->
-  <link href="{% static 'static/img/favicon.png' %}" rel="icon">
-
-  <!-- Google Fonts -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
-
-  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet">
+{% endblock nav_ul %}
 
 
-  <!-- Vendor CSS Files -->
-  <link href="{% static 'static/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/venobox/venobox.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
-  <link href="{% static 'static/vendor/aos/aos.css' %}" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="{% static 'static/css/style.css' %}" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Gp - v2.0.0
-  * Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-
-<body>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top ">
-    <div class="container d-flex align-items-center justify-content-between">
-
-      <h1 class="logo scrollto"><a href="#hero">LL<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
-
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#services">Serviços</a></li>
-          <li><a href="#portfolio">Portifólio</a></li>
-          <li><a href="#project">Projeto</a></li>
-          <li><a href="#payment">Pagamento</a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-
-      <a href="#about" class="get-started-btn scrollto font-jura">Contratar</a>
-
-    </div>
-  </header><!-- End Header -->
+{% block  super_main %}
 
   {% include "index_includes/capa.html" %}
 
-  <main id="main">
-
-    {% include "index_includes/sobre.html" %}
-
-    {% include "index_includes/servicos.html" %}
-
-    {% include "index_includes/portfolio.html" %}
-
-    {% include "index_includes/project.html" %}
-
-    {% include "index_includes/payment.html" %}
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-info">
-              <h3>LL<span>.</span></h3>
-              <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
-              </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>LL</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
-  <div id="preloader"></div>
-
-  <!-- Vendor JS Files -->
-  <script src="{% static 'static/vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'static/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'static/vendor/jquery.easing/jquery.easing.min.js' %}"></script>
-  <script src="{% static 'static/vendor/php-email-form/validate.js' %}"></script>
-  <script src="{% static 'static/vendor/owl.carousel/owl.carousel.min.js' %}"></script>
-  <script src="{% static 'static/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static 'static/vendor/venobox/venobox.min.js' %}"></script>
-  <script src="{% static 'static/vendor/waypoints/jquery.waypoints.min.js' %}"></script>
-  <script src="{% static 'static/vendor/counterup/counterup.min.js' %}"></script>
-  <script src="{% static 'static/vendor/aos/aos.js' %}"></script>
-
-  <!-- Template Main JS File -->
-  <script src="{% static 'static/js/main.js' %}"></script>
-
-</body>
+{% endblock super_main %}
 
 
+{% block main %}
 
-</html>
+  {% include "index_includes/sobre.html" %}
+
+  {% include "index_includes/servicos.html" %}
+
+  {% include "index_includes/portfolio.html" %}
+
+  {% include "index_includes/project.html" %}
+
+  {% include "index_includes/payment.html" %}
+
+{% endblock main %}
+    
+
