corrected aos bug

--- a/.build/index_includes/project.html
+++ b/.build/index_includes/project.html
@@ -1,5 +1,5 @@
 <section id="project">
-  <div class="container mb-5 pb-5" data-aos="fade-up">
+  <div class="container mb-5 pb-5">
 
     <div class="section-title">
       <h2>Projeto</h2>
