--- a/pages/index_includes/payment.html
+++ b/pages/index_includes/payment.html
@@ -1,37 +1,36 @@
 <!-- ======= Cta Section ======= -->
 <section id="payment" class="cta">
-  <div class="container" data-aos="zoom-in">
+  <div class="container">
 
     <div class="section-title">
       <h2>Pagamento</h2>
-      <p>Formas de Pagamento</p>
     </div>
 
     <div class="d-flex justify-content-between">
 
       <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-bitcoin bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Bitcoin</p>
+        <i class="bx bx-bitcoin bg-warning display-3 rounded"></i>
+        <p class="font-jura">Bitcoin</p>
       </div>
 
       <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-money bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Dinheiro</p>
+        <i class="bx bx-money bg-warning display-3 rounded"></i>
+        <p class="font-jura">Dinheiro</p>
       </div>
 
       <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-credit-card-front bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Depósito</p>
+        <i class="bx bx-credit-card-front bg-warning display-3 rounded"></i>
+        <p class="font-jura">Depósito</p>
       </div>
 
       <div class="d-flex flex-column align-items-center">
-        <i class="bx bxl-paypal bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">PayPal</p>
+        <i class="bx bxl-paypal bg-warning display-3 rounded"></i>
+        <p class="font-jura">PayPal</p>
       </div>
 
       <div class="d-flex flex-column align-items-center">
-        <i class="bx bx-barcode bg-warning display-3 rounded" style="color:black;"></i>
-        <p class="text-warning">Boleto</p>
+        <i class="bx bx-barcode bg-warning display-3 rounded"></i>
+        <p class="font-jura">Boleto</p>
       </div>
 
     </div>
