--- a/.build/index.html
+++ b/.build/index.html
@@ -48,7 +48,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo scrollto"><a href="#hero">LL<span>.</span></a></h1>
+      <h1 class="logo scrollto"><a href="/">LL<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
     
@@ -157,7 +157,7 @@
 
         <div class="section-title">
           <h2>Serviços</h2>
-          <p>Nossos serviços</p>
+          <p>Produtos da Empresa</p>
         </div>
 
 
@@ -210,7 +210,7 @@
 
     <div class="section-title">
       <h2>Portifólio</h2>
-      <p>Portifólio de trabalhos</p>
+      <p>Galeria de trabalhos</p>
     </div>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -377,7 +377,7 @@
 
     <div class="section-title">
       <h2>Projeto</h2>
-      <p>Descreva seu projeto</p>
+      <p>Descreva & Acompanhe</p>
     </div>
 
     <div class="row align-items-center justify-content-between mt-5">
@@ -393,7 +393,7 @@
           <hr class="w-100 bg-warning"> 
         </div>
         <p class="font-josefin mx-3 mb-0 mt-3">Acompanhe as etapas de seu projeto e veja como estamos trabalhando nele</p>
-        <a href="#" class="btn btn-lg btn-dark my-3">Acompanhar projeto</a>
+        <a href="/keep-up.html" class="btn btn-lg btn-dark my-3">Acompanhar projeto</a>
       </div>
     </div>
   </div>
