--- a/.build/index_includes/project.html
+++ b/.build/index_includes/project.html
@@ -3,7 +3,7 @@
 
     <div class="section-title">
       <h2>Projeto</h2>
-      <p>Descreva seu projeto</p>
+      <p>Descreva & Acompanhe</p>
     </div>
 
     <div class="row align-items-center justify-content-between mt-5">
@@ -19,7 +19,7 @@
           <hr class="w-100 bg-warning"> 
         </div>
         <p class="font-josefin mx-3 mb-0 mt-3">Acompanhe as etapas de seu projeto e veja como estamos trabalhando nele</p>
-        <a href="#" class="btn btn-lg btn-dark my-3">Acompanhar projeto</a>
+        <a href="/keep-up.html" class="btn btn-lg btn-dark my-3">Acompanhar projeto</a>
       </div>
     </div>
   </div>
