--- a/.build/contact.html
+++ b/.build/contact.html
@@ -48,7 +48,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo scrollto"><a href="#hero">LL<span>.</span></a></h1>
+      <h1 class="logo scrollto"><a href="/">LL<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
     
