--- a/.build/index_includes/servicos.html
+++ b/.build/index_includes/servicos.html
@@ -4,7 +4,7 @@
 
         <div class="section-title">
           <h2>Serviços</h2>
-          <p>Nossos serviços</p>
+          <p>Produtos da Empresa</p>
         </div>
 
 
