--- a/pages/index_includes/portfolio.html
+++ b/pages/index_includes/portfolio.html
@@ -4,7 +4,7 @@
 
     <div class="section-title">
       <h2>Portifólio</h2>
-      <p>Portifólio de trabalhos</p>
+      <p>Galeria de trabalhos</p>
     </div>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
