--- a/pages/index_includes/servicos.html
+++ b/pages/index_includes/servicos.html
@@ -5,7 +5,7 @@
 
         <div class="section-title">
           <h2>Serviços</h2>
-          <p>Nossos serviços</p>
+          <p>Produtos da Empresa</p>
         </div>
 
 
