created many pages

--- a/.build/about.html
+++ b/.build/about.html
@@ -30,6 +30,10 @@
 
   <!-- Template Main CSS File -->
   <link href="static/css/style.css" rel="stylesheet">
+
+
+  <!-- Captcha -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   
   
   
@@ -135,6 +139,16 @@
     </div>
 
     <div class="container">
+
+      <!-- Bitcoin accepted here  -->
+      <div class="d-flex justify-content-center align-items-start mr-5 mt-4">
+        <i class='bx bxl-bitcoin display-4'></i> 
+        <div>
+          <h2 class="font-jura text-right m-0">Bitcoin</h2>
+          <span>accepted here</span>
+        </div>
+      </div>
+
       <div class="copyright">
         &copy; Copyright <strong><span>LL</span></strong>. All Rights Reserved
       </div>
