--- a/.build/index.html
+++ b/.build/index.html
@@ -30,6 +30,10 @@
 
   <!-- Template Main CSS File -->
   <link href="static/css/style.css" rel="stylesheet">
+
+
+  <!-- Captcha -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   
   
   
@@ -385,7 +389,7 @@
         <img src="static/img/deal.svg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 text-center">
-        <a href="#" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
+        <a href="/new-project.html" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
         <p class="font-josefin mx-3">Descreva suas ideias e produtos que deseja, para nossa equipe já iniciar os trabalhos</p>
         <div class="d-flex justify-content-center align-items-center">
           <hr class="w-100 bg-warning"> 
@@ -506,6 +510,16 @@
     </div>
 
     <div class="container">
+
+      <!-- Bitcoin accepted here  -->
+      <div class="d-flex justify-content-center align-items-start mr-5 mt-4">
+        <i class='bx bxl-bitcoin display-4'></i> 
+        <div>
+          <h2 class="font-jura text-right m-0">Bitcoin</h2>
+          <span>accepted here</span>
+        </div>
+      </div>
+
       <div class="copyright">
         &copy; Copyright <strong><span>LL</span></strong>. All Rights Reserved
       </div>
