--- a/pages/index_includes/project.html
+++ b/pages/index_includes/project.html
@@ -11,7 +11,7 @@
         <img src="{% static 'static/img/deal.svg' %}" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 text-center">
-        <a href="#" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
+        <a href="/new-project.html" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
         <p class="font-josefin mx-3">Descreva suas ideias e produtos que deseja, para nossa equipe já iniciar os trabalhos</p>
         <div class="d-flex justify-content-center align-items-center">
           <hr class="w-100 bg-warning"> 
