--- a/.build/index.html
+++ b/.build/index.html
@@ -104,7 +104,7 @@
 
     <div class="row align-items-center">
       <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-        <img src="static/img/computers.svg" class="img-fluid pt-5" alt="">
+        <img src="static/img/svg/computers.svg" class="img-fluid pt-5" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
         <h3>LucLog <span class="text-warning">•</span> codificando suas ideais</h3>
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-1" data-aos="fade-right" data-aos-delay="100">
-            <img src="static/img/windows.svg" class="img-fluid" alt="">
+            <img src="static/img/svg/windows.svg" class="img-fluid" alt="">
           </div>
         </div>
 
@@ -174,13 +174,13 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/website.svg" class="img-fluid p-lg-4" alt="">
+            <img src="static/img/svg/new_project.svg" class="img-fluid p-lg-4" alt="">
           </div>
         </div>
 
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/server.svg" class="img-fluid" alt="">
+            <img src="static/img/svg/transact.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
@@ -199,8 +199,8 @@
               <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/charts.svg" class="img-fluid" alt="">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <img src="static/img/svg/chart-panel.svg" class="img-fluid" alt="">
           </div>
         </div>
 
@@ -386,7 +386,7 @@
 
     <div class="row align-items-center justify-content-between mt-5">
       <div class="col-lg-6">
-        <img src="static/img/deal.svg" class="img-fluid" alt="">
+        <img src="static/img/svg/deal.svg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 text-center">
         <a href="/new-project.html" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
