--- a/.build/index_includes/servicos.html
+++ b/.build/index_includes/servicos.html
@@ -17,13 +17,13 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/website.svg" class="img-fluid p-lg-4" alt="">
+            <img src="static/img/svg/new_project.svg" class="img-fluid p-lg-4" alt="">
           </div>
         </div>
 
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/server.svg" class="img-fluid" alt="">
+            <img src="static/img/svg/transact.svg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
@@ -42,8 +42,8 @@
               <div class="icon"><i class="bx bx-bar-chart-square"></i></div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 d-flex align-items-stretch p-lg-5" data-aos="zoom-in" data-aos-delay="100">
-            <img src="static/img/charts.svg" class="img-fluid" alt="">
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <img src="static/img/svg/chart-panel.svg" class="img-fluid" alt="">
           </div>
         </div>
 
