--- a/.build/index_includes/sobre.html
+++ b/.build/index_includes/sobre.html
@@ -4,7 +4,7 @@
 
     <div class="row align-items-center">
       <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-        <img src="static/img/computers.svg" class="img-fluid pt-5" alt="">
+        <img src="static/img/svg/computers.svg" class="img-fluid pt-5" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
         <h3>LucLog <span class="text-warning">•</span> codificando suas ideais</h3>
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-1" data-aos="fade-right" data-aos-delay="100">
-            <img src="static/img/windows.svg" class="img-fluid" alt="">
+            <img src="static/img/svg/windows.svg" class="img-fluid" alt="">
           </div>
         </div>
 
