--- a/.build/keep-up.html
+++ b/.build/keep-up.html
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <img src="static/img/program.svg" class="d-none d-lg-block img-fluid my-5 px-lg-5" alt="">
+            <img src="static/img/svg/program.svg" class="d-none d-lg-block img-fluid my-5 px-lg-5" alt="">
         </div>
     </div>
     
@@ -115,7 +115,7 @@
 
       <div class="row align-items-center justify-content-between mt-5 pt-5">
         <div class="col-lg-6">
-          <img src="static/img/deal.svg" class="img-fluid" alt="">
+          <img src="static/img/svg/deal.svg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 text-center">
             <p class="font-josefin mx-3">Descreva suas ideias e produtos que deseja, para nossa equipe já iniciar os trabalhos</p>
