--- a/pages/index_includes/project.html
+++ b/pages/index_includes/project.html
@@ -8,7 +8,7 @@
 
     <div class="row align-items-center justify-content-between mt-5">
       <div class="col-lg-6">
-        <img src="{% static 'static/img/deal.svg' %}" class="img-fluid" alt="">
+        <img src="{% static 'static/img/svg/deal.svg' %}" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 text-center">
         <a href="/new-project.html" class="btn btn-lg btn-warning my-3">Descrever projeto</a>
