--- a/pages/error.html
+++ b/pages/error.html
@@ -6,7 +6,7 @@
 <section>
   <h1 class="text-center">Error 404 - Not Found</h1>
   <div class="d-flex justify-content-center">
-    <img src="{% static 'static/img/404.svg' %}" class="img-fluid  mx-5" alt="">
+    <img src="{% static 'static/img/svg/404.svg' %}" class="img-fluid  mx-5" alt="">
   </div>
 </section>
 {% endblock main %}
